--- a/bio.html
+++ b/bio.html
@@ -1,39 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Bio – Ewan James Knight</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            margin: 40px;
-            background-color: #fefefe;
-            color: #111;
-        }
-        h1 {
-            font-size: 2em;
-        }
-        p {
-            font-size: 1.1em;
-            line-height: 1.7em;
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Bio</h1>
-    <p>Ewan James Knight is a musician, composer, and sound artist based in Sheffield, UK. His work spans ambient music, experimental performance, sound design for games, and collaborative installation. His creative practice explores how listening can connect psychological states, environmental spaces, and the body, often through a blend of field recordings, synthesis, spoken word, and live performance.</p>
-
-    <p>He recently completed an MA in Music Performance, Production and Business at Falmouth University. His final project, <em>Things Fall Between</em>, premiered in 2025 and will be released as a full-length ambient album. Performed live across six movements using guitar, synthesizers, and effects, the work evokes the metaphor of falling as a psychological rupture, drawing on influences such as Hiroshi Yoshimura and Arvo Pärt.</p>
-
-    <p>His debut EP, <em>you might never be in the same room you are listening to this again</em>, is set for release in late 2025, continuing his focus on inner landscapes and the subtleties of listening. He also creates sound and music for interactive media, including the experimental video games <em>I Dancem Refusant</em> and its sequel by Jack Readman, combining ambient textures with reactive, affective sound design.</p>
-
-    <p>As half of the collaborative duo <strong>Individual Hotpot</strong> with Korean artist Nam Joo Huh, Ewan co-devised <em>Gut Feelings</em>, a performance-lecture and installation exploring involuntary body sounds, sonic shame, and everyday sonic memory. The piece has been performed across the UK and exhibited as part of the Liverpool Independents Biennial at BIRCH Studios.</p>
-
-    <p>Ewan’s work is supported by the Earthsonic Futures programme, recognising his emerging contribution to ecological listening and environmental sound art. His interest in site-specific listening continues to shape new work using field recording, spatialisation, and participatory performance.</p>
-
-    <p>Beyond his solo and collaborative creative output, Ewan is an experienced session musician, live performer, and educator. A classically trained guitarist (Grade 8), he works across electric guitar, bass, keys, and production, and performs with artists including Selina Lee, Mat Hook, and Steel City Groovers. He also teaches regularly through Sheffield Music Hub, Sheffield Inclusion Centre, and Seven Hills Tuition.</p>
+    <h1>Bio – Ewan James Knight</h1>
+    <p>This is a placeholder for the bio – ewan james knight page.</p>
 </body>
 </html>
