--- a/bio.html
+++ b/bio.html
@@ -1,12 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Bio – Ewan James Knight</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bio – Ewan James Knight</h1>
-    <p>This is a placeholder for the bio – ewan james knight page.</p>
+    <h1>Bio</h1>
+    <p>Ewan James Knight is a musician, composer, and sound artist based in Sheffield, UK. His work spans ambient music, experimental performance, sound design for games, and collaborative installation. His creative practice explores how listening can connect psychological states, environmental spaces, and the body, often through a blend of field recordings, synthesis, spoken word, and live performance.</p>
+    <p>He recently completed an MA in Music Performance, Production and Business at Falmouth University. His final project, <em>Things Fall Between</em>, premiered in 2025 and will be released as a full-length ambient album. Performed live across six movements using guitar, synthesizers, and effects, the work evokes the metaphor of falling as a psychological rupture, drawing on influences such as Hiroshi Yoshimura and Arvo Pärt.</p>
+    <p>His debut EP, <em>you might never be in the same room you are listening to this again</em>, is set for release in late 2025. He also creates sound and music for interactive media, including the experimental video games by Jack Readman, combining ambient textures with reactive, affective sound design.</p>
+    <p>As half of the collaborative duo <strong>Individual Hotpot</strong> with Korean artist Nam Joo Huh, Ewan co-devised <em>Gut Feelings</em>, a performance-lecture and installation exploring involuntary body sounds, sonic shame, and everyday sonic memory. The piece has been performed across the UK and exhibited at BIRCH Studios as part of the Liverpool Independents Biennial.</p>
+    <p>Ewan’s work is supported by the Earthsonic Futures programme, recognising his contribution to ecological listening and environmental sound art. His interest in site-specific listening continues to shape new work using field recording, spatialisation, and participatory performance.</p>
+    <p>He is also a classically trained guitarist (Grade 8) and an experienced session musician, performing with artists including Selina Lee, Mat Hook, and Steel City Groovers. He teaches regularly through Sheffield Music Hub, Sheffield Inclusion Centre, and Seven Hills Tuition.</p>
 </body>
 </html>
