--- a/contact.html
+++ b/contact.html
@@ -66,10 +66,10 @@
         <a href="contact.html">Contact</a>
         <button class="expand-button" onclick="toggleWorks()">+ Works</button>
         <div id="works-submenu" class="works-submenu">
-            <a href="gut-feelings.html">Gut Feelings</a>
-            <a href="things-fall-between.html">Things Fall Between</a>
-            <a href="spotify.html">Spotify</a>
-            <a href="soundcloud.html">SoundCloud</a>
+            <a href="works/gut-feelings.html">Gut Feelings</a>
+            <a href="works/things-fall-between.html">Things Fall Between</a>
+            <a href="works/spotify.html">Spotify</a>
+            <a href="works/soundcloud.html">SoundCloud</a>
         </div>
     </div>
 
