--- a/bio.html
+++ b/bio.html
@@ -50,7 +50,7 @@
         <div class="bio-image">
             <img src="bio_image.jpg" alt="Ewan James Knight performing live">
         </div>
-        <div class="bio-text">
+        <div class="bio-image">
             <h1>About</h1>
             <p>Ewan Knight is a UK-based musician, composer, and sound designer whose work spans ambient music, experimental performance, and collaborative sound art. Working under the artist name brainjjus, he creates emotionally resonant solo ambient works that explore inner landscapes, psychological states, and the act of listening. His debut EP <em>you might never be in the same room you are listening to this again</em> is due for release in late 2025.</p>
 
@@ -62,7 +62,7 @@
 
             <p>He was recently selected for the Earthsonic Futures programme, supporting emerging artists working with sound and environmental activism.</p>
 
-            <p>Ewan is also a dedicated educator, teaching through Sheffield Music Hub, Sheffield Inclusion Centre, and privately. He focuses on inclusive approaches to performance, composition, and music technology.</p>
+            <p>Ewan is a classically trained guitarist and multi-instrumentalist. He is also a dedicated educator, teaching through Sheffield Music Hub, Sheffield Inclusion Centre, and privately. He focuses on inclusive approaches to performance, composition, and music technology.</p>
         </div>
     </div>
 </body>
