--- a/bio.html
+++ b/bio.html
@@ -1,70 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Bio | Ewan James Knight</title>
-    
-    <style>
-        body {
-            font-family: "Times New Roman", serif;
-            background-color: #111;
-            color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-        .sidebar {
-            width: 200px;
-            background-color: #000;
-            padding: 20px;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: 0;
-            display: flex;
-            flex-direction: column;
-        }
-        .sidebar a {
-            color: #f0f0f0;
-            text-decoration: none;
-            margin-bottom: 10px;
-        }
-        .dropdown-content {
-            display: none;
-            flex-direction: column;
-            padding-left: 10px;
-        }
-        .dropdown:hover .dropdown-content {
-            display: flex;
-        }
-        .bio-wrapper {
-            margin-left: 220px;
-            padding: 40px;
-            display: flex;
-            flex-wrap: wrap;
-            align-items: flex-start;
-            justify-content: space-between;
-        }
-        .bio-text {
-            flex: 1;
-            padding-right: 20px;
-            max-width: 55%;
-        }
-        .bio-image {
-            flex: 1;
-            max-width: 40%;
-        }
-        .bio-image img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-    </style>
-
+  <meta charset="UTF-8">
+  <title>Bio</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    
-    <div class="sidebar">
+  <header>
+  <h1><a href="/index.html">Ewan James Knight</a></h1>
+  <nav>
+    <ul>
+      <li><a href="/bio.html">Bio</a></li>
+      <li><a href="/cv.html">CV</a></li>
+      <li><a href="/session.html">Session Work</a></li>
+      <li><a href="/tuition.html">Tuition</a></li>
+      <li><a href="/contact.html">Contact</a></li>
+      <li>
+        <a href="#">Works ▾</a>
+        <ul>
+          <li><a href="/works/gut-feelings.html">Gut Feelings</a></li>
+          <li><a href="/works/things-fall-between.html">Things Fall Between</a></li>
+          <li><a href="/works/spotify.html">Spotify</a></li>
+          <li><a href="/works/soundcloud.html">SoundCloud</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+  <main>
+  <div class="sidebar">
         <a href="index.html">Home</a>
         <a href="bio.html">Bio</a>
         <a href="cv.html">CV</a>
@@ -105,6 +70,6 @@
         <img src="bio_image.jpg" alt="Ewan performing live">
     </div>
 </div>
-
+  </main>
 </body>
 </html>
