--- a/bio.html
+++ b/bio.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Ewan James Knight</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="container">
@@ -19,14 +20,14 @@
       <ul class="submenu">
         <li><a href="works/gut-feelings.html">gut feelings</a></li>
         <li><a href="works/things-fall-between.html">things fall between</a></li>
-        <li><a href="works/spotify.html">spotify</a></li>
-        <li><a href="works/soundcloud.html">soundcloud</a></li>
+        <li><a href="https://open.spotify.com/" target="_blank" rel="noopener">spotify</a></li>
+        <li><a href="https://soundcloud.com/brainjjus" target="_blank" rel="noopener">soundcloud</a></li>
       </ul>
     </li>
   </ul>
 </div>
 
-    <main>
+    <main class="content">
       <div class="sidebar">
         <a href="index.html">Home</a>
         <a href="bio.html">Bio</a>
