--- a/bio.html
+++ b/bio.html
@@ -1,34 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Ewan James Knight</title>
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Bio | Ewan James Knight</title>
+    
+    <style>
+        body {
+            font-family: "Times New Roman", serif;
+            background-color: #111;
+            color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+        .sidebar {
+            width: 200px;
+            background-color: #000;
+            padding: 20px;
+            height: 100vh;
+            position: fixed;
+            top: 0;
+            left: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        .sidebar a {
+            color: #f0f0f0;
+            text-decoration: none;
+            margin-bottom: 10px;
+        }
+        .dropdown-content {
+            display: none;
+            flex-direction: column;
+            padding-left: 10px;
+        }
+        .dropdown:hover .dropdown-content {
+            display: flex;
+        }
+        .bio-wrapper {
+            margin-left: 220px;
+            padding: 40px;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            justify-content: space-between;
+        }
+        .bio-text {
+            flex: 1;
+            padding-right: 20px;
+            max-width: 55%;
+        }
+        .bio-image {
+            flex: 1;
+            max-width: 40%;
+        }
+        .bio-image img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+    </style>
+
 </head>
 <body>
-  <div class="container">
+    
     <div class="sidebar">
-  <div class="brand"><a href="index.html">ewan james knight</a></div>
-  <ul class="nav">
-    <li><a href="bio.html">bio</a></li>
-    <li><a href="cv.html">cv</a></li>
-    <li><a href="session.html">session work</a></li>
-    <li><a href="tuition.html">tuition</a></li>
-    <li><a href="contact.html">contact</a></li>
-    <li class="has-submenu"><a href="#">works</a>
-      <ul class="submenu">
-        <li><a href="works/gut-feelings.html">gut feelings</a></li>
-        <li><a href="works/things-fall-between.html">things fall between</a></li>
-        <li><a href="https://open.spotify.com/" target="_blank" rel="noopener">spotify</a></li>
-        <li><a href="https://soundcloud.com/brainjjus" target="_blank" rel="noopener">soundcloud</a></li>
-      </ul>
-    </li>
-  </ul>
-</div>
-
-    <main class="content">
-      <div class="sidebar">
         <a href="index.html">Home</a>
         <a href="bio.html">Bio</a>
         <a href="cv.html">CV</a>
@@ -69,7 +105,6 @@
         <img src="bio_image.jpg" alt="Ewan performing live">
     </div>
 </div>
-    </main>
-  </div>
+
 </body>
 </html>
